--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 fastapi==0.115.11
+filelock==3.18.0
+fsspec==2025.3.0
 greenlet==3.1.1
 grpcio==1.71.0
 grpcio-tools==1.71.0
@@ -12,8 +14,11 @@ h2==4.2.0
 hpack==4.1.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.29.3
 hyperframe==6.1.0
 idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.21
@@ -24,10 +29,14 @@ langgraph-checkpoint==2.0.21
 langgraph-prebuilt==0.1.4
 langgraph-sdk==0.1.58
 langsmith==0.3.18
+MarkupSafe==3.0.2
+mpmath==1.3.0
 msgpack==1.1.0
+networkx==3.4.2
 numpy==2.2.4
 orjson==3.10.15
 packaging==24.2
+pillow==11.1.0
 portalocker==2.10.1
 protobuf==5.29.4
 pydantic==2.10.6
@@ -35,12 +44,23 @@ pydantic_core==2.27.2
 python-dotenv==1.0.1
 PyYAML==6.0.2
 qdrant-client==1.13.3
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
 sniffio==1.3.1
 SQLAlchemy==2.0.39
 starlette==0.46.1
+sympy==1.13.1
 tenacity==9.0.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.50.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
