--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -44,6 +46,7 @@ pydantic_core==2.27.2
 python-dotenv==1.0.1
 PyYAML==6.0.2
 qdrant-client==1.13.3
+redis==5.2.1
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
