--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-
-
 services:
   api:
     build: .
@@ -21,8 +19,8 @@ services:
   redis:
     image: redis:7-alpine
     container_name: wb_redis
-    ports:
-      - "6379:6379"
+    # ports:
+    #  - "6379:6379"
     volumes:
       - redis-data:/data
 
