feat: Add Ansible deployment automation for production server
- Create complete Ansible playbook for deployment to 45.90.123.190
- Configure docker-compose with unique container names to avoid conflicts
- Set up proper port mapping (8001 for app, 6333 for Qdrant, 6380 for Redis)
- Add templates for nginx, environment variables and docker-compose
- Include deployment script and comprehensive documentation
- Update .gitignore to protect sensitive credentials
- Fix container naming conflicts (chatbot_app, chatbot_qdrant, chatbot_redis)

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,14 @@ coverage.xml
 *.embedding
 
 commands.md
+
+# Ansible - arquivos com credenciais
+ansible/inventory.ini
+ansible/*.retry
+ansible/hosts
+ansible/group_vars/
+ansible/host_vars/
+
+# Arquivos de backup
+*.backup
+*.bak.yml
